# EventTracker

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  ONBOARDING.md  PRODUCT_OVERVIEW.md  README.md  README_EXPLAIN_IT_TO_ME_LIKE_I_AM_5.md  copilot-instructions.md  generate_demo_assets.py  package-lock.json  package.json  pyproject.toml  tsconfig.json
.agents/skills/playwright-typescript-testing/: SKILL.md
.agents/skills/scoped-tests/: SKILL.md
.claude/: settings.json  settings.local.json
.claude/worktrees/nostalgic-curie-0215c6/: .env.example  README.md  package-lock.json  package.json  pyproject.toml
.claude/worktrees/nostalgic-curie-0215c6/.playwright-mcp/: page-2026-04-02T17-16-15-586Z.yml
.claude/worktrees/nostalgic-curie-0215c6/app/: models.py
.claude/worktrees/nostalgic-curie-0215c6/scripts/: compute_suggested_connections.py  compute_topic_clusters.py  generate_demo_assets.py  generate_test_report.py  import_entries.py  merge_and_shrink_pdf.py  render_story_deck.mjs
.claude/worktrees/nostalgic-curie-0215c6/tests/: test_admin_groups.py  test_ai_generate.py  test_event_chat.py  test_extraction.py  test_init_db.py  test_run_dev.py  test_story_deck.py  test_topics.py
.claude/worktrees/reverent-wilson-50ae6c/: .gitignore  playwright.config.ts
.claude/worktrees/reverent-wilson-50ae6c/.claude/: settings.json
.claude/worktrees/reverent-wilson-50ae6c/app/: csrf.py  env.py
.claude/worktrees/reverent-wilson-50ae6c/docs/: requirements-template.md
.claude/worktrees/reverent-wilson-50ae6c/scripts/: test_cluster.py
.claude/worktrees/reverent-wilson-50ae6c/tests/: csrf_helpers.py  test_ai_story_mode.py  test_entries.py  test_heatmap_api.py  test_story_mode.py
.github/: copilot-instructions.md  settings.local.json
.github/agents/: explorer.md
.playwright-mcp/: page-2026-04-02T17-16-05-089Z.yml  page-2026-04-02T17-16-27-697Z.yml  page-2026-04-02T17-16-51-663Z.yml  page-2026-04-02T17-17-21-044Z.yml
.superpowers/brainstorm/208-1775523732/content/: design-overview.html
.superpowers/brainstorm/254-1775432154/content/: component-style.html
app/: db.py  main.py  models.py  route_helpers.py  schemas.py  templating.py  tracing.py
app/services/: ai_generate.py  ai_story_mode.py  copilot_runtime.py  copilot_sdk.py  embeddings.py  entries.py  extraction.py  group_web_search.py  groups.py  search.py  story_deck.py  story_mode.py  topics.py
app/static/: styles.css
app/templates/: admin_groups.html  base.html  connection_graph.html  dev_tracer.html  entry_detail.html  entry_form.html  search.html  story.html  timeline.html
app/templates/partials/: entry_card.html  entry_preview.html  generated_preview.html  heatmap_entries.html  html_preview_content.html  search_results.html  timeline_bucket_cards.html  timeline_detail_groups.html  timeline_summary_groups.html
docs/: code-review-results.md
docs/decisions/: ADR-001-local-first-single-process-fastapi-sqlite.md  ADR-002-hybrid-search-fts5-plus-optional-sqlite-vec.md  README.md
docs/demo-assets/: README.md
docs/demo-playwright-ts/: setup.MD  testplan.MD
docs/functional-requirements/: FR-001-entry-lifecycle.md  FR-002-timeline-browsing.md  FR-003-search-and-filtering.md  FR-004-group-administration.md  FR-005-ai-draft-generation.md  FR-006-story-mode.md  FR-007-group-web-search.md  FR-008-data-portability-and-tools.md  FR-009-application-shell-and-theme.md  FR-010-quick-cli-add-entry.md  FR-010-topic-clustering.md  FR-011-event-chat.md  FR-012-heatmap-visualization.md  FR-013-suggested-entry-connections.md  FR-014-connection-graph-visualization.md  README.md
docs/non-functional-requirements/: NFR-001-architecture-and-runtime.md  NFR-002-persistence-and-schema-evolution.md  NFR-003-configuration-and-environment.md  NFR-004-reliability-and-graceful-degradation.md  NFR-005-security-and-trust-boundaries.md  NFR-006-performance-and-operational-limits.md  NFR-007-testing-and-verification.md  README.md
docs/superpowers/plans/: 2026-04-05-developer-aesthetic-redesign.md  2026-04-06-entry-form-ux-redesign.md
docs/superpowers/specs/: 2026-04-06-activity-heatmap-design.md
docs/temp-implementation-plans/: AI_SUGGESTED_CONNECTIONS_IMPLEMENTATION_PLAN.md  EVENT_CHAT_IMPLEMENTATION_SPEC.md
docs/test-reports/: test-results-e2e.xml
scripts/: accept_suggested_connections.py  add_entry.py  bulk_add_entries.py  combine_and_optimize_pdf.py  compute_suggested_connections.py  generate_demo_assets.py  import_entries.py  init_db.py  merge_pdfs.py  refresh_source_snapshots.py  run_dev.py  test_labels.py
tests/: test_ai_generate.py  test_ai_story_mode.py  test_cli_add_entry.py  test_db.py  test_embeddings.py  test_entries.py  test_extraction.py  test_group_web_search.py  test_heatmap_api.py  test_helper_duplication_audit.py  test_import_entries.py  test_sanitize.py  test_search.py  test_smoke.py  test_story_deck.py  test_story_mode.py  test_story_routes.py  test_suggested_connections.py
tests/e2e/: conftest.py  test_admin_groups_crud.py  test_core_workflows.py  test_navigation_and_entry_detail.py  test_optional_mocked_workflows.py  test_search_and_topic_graph.py  test_story_mode.py
tools/mcp/: codebase_search.py
tstests/docs/: PageAndAPIInfo.md
tstests/e2e/: entry-lifecycle-create-read-edit.spec.ts
tstests/e2e/helpers/: harness.ts
tstests/e2e/poms/: admin-groups-page.ts  entry-detail-page.ts  timeline-page.ts
tutorial/: README.md  index.html
(+55 files in other folders)
