[project]
name = "EventTracker"
version = "0.1.0"
description = "Local-first personal timeline and journal app built with FastAPI and SQLite."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "beautifulsoup4==4.14.3",
    "fastapi==0.135.3",
    "github-copilot-sdk",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "markdown>=3.10.2",
    "markitdown[pdf,docx,xlsx,xls,pptx,outlook,audio-transcription]>=0.1.5",
    "youtube-transcript-api>=1.2.4",
    "openai>=2.31.0,<3.0.0",
    "python-dotenv==1.2.2",
    "python-multipart==0.0.27",
    "sqlite-vec==0.1.9",
    "uvicorn[standard]==0.44.0",
]

[dependency-groups]
dev = [
    "mcp>=1.0,<2",
    "playwright>=1.52,<2",
    "pyright>=1.1.404,<2",
    "pytest>=9.0.3,<10",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = [
    "app/__init__.py",
    "app/csrf.py",
    "app/db.py",
    "app/env.py",
    "app/main.py",
    "app/models.py",
    "app/route_helpers.py",
    "app/routes/__init__.py",
    "app/schemas.py",
    "app/templating.py",
    "app/tracing.py",
    "app/services/__init__.py",
    "app/services/ai_generate.py",
    "app/services/ai_story_mode.py",
    "app/services/copilot_runtime.py",
    "app/services/copilot_sdk.py",
    "app/services/embeddings.py",
    "app/services/entries.py",
    "app/services/event_chat.py",
    "app/services/extraction.py",
    "app/services/formatting.py",
    "app/services/groups.py",
    "app/services/group_web_search.py",
    "app/services/search.py",
    "app/services/story_deck.py",
    "app/services/story_mode.py",
    "app/services/suggested_connections.py",
    "app/services/topics.py",
    "scripts/accept_suggested_connections.py",
    "scripts/compute_suggested_connections.py",
    "scripts/compute_topic_clusters.py",
    "scripts/import_entries.py",
    "scripts/init_db.py",
    "scripts/refresh_source_snapshots.py",
    "scripts/run_dev.py",
    "scripts/test_cluster.py",
    "scripts/test_labels.py",
    "tests/csrf_helpers.py",
    "tests/test_admin_groups.py",
    "tests/test_ai_generate.py",
    "tests/test_ai_story_mode.py",
    "tests/test_db.py",
    "tests/test_embeddings.py",
    "tests/test_entries.py",
    "tests/test_event_chat.py",
    "tests/test_extraction.py",
    "tests/test_group_web_search.py",
    "tests/test_heatmap_api.py",
    "tests/test_helper_duplication_audit.py",
    "tests/test_import_entries.py",
    "tests/test_init_db.py",
    "tests/test_run_dev.py",
    "tests/test_sanitize.py",
    "tests/test_search.py",
    "tests/test_smoke.py",
    "tests/test_story_deck.py",
    "tests/test_story_mode.py",
    "tests/test_story_routes.py",
    "tests/test_topics.py",
    "tests/e2e/conftest.py",
    "tests/e2e/test_admin_groups_crud.py",
    "tests/e2e/test_core_workflows.py",
    "tests/e2e/test_navigation_and_entry_detail.py",
    "tests/e2e/test_optional_mocked_workflows.py",
    "tests/e2e/test_search_and_topic_graph.py",
    "tests/e2e/test_story_mode.py",
]
reportMissingTypeStubs = false
